[package]
name = "mpesa"
version = "2.1.1"
authors = [
  "Collins Muriuki <murerwacollins@gmail.com>",
  "Tralah M Brian <briantralah@gmail.com",
]
edition = "2024"
description = "A wrapper around the M-PESA API in Rust."
keywords = ["api", "mpesa", "mobile"]
repository = "https://github.com/tralahm/mpesa-rust"
readme = "./README.md"
license = "MIT"

[features]
default = [
  "account_balance",
  "b2b",
  "b2c",
  "bill_manager",
  "c2b_register",
  "c2b_simulate",
  "express",
  "transaction_reversal",
  "transaction_status",
  "dynamic_qr",
  "no_openssl",
]
disable_default_features = ["openssl"]
dynamic_qr = []
account_balance = ["no_openssl"]
b2b = ["no_openssl"]
b2c = ["no_openssl"]
bill_manager = ["dep:chrono"]
c2b_register = []
c2b_simulate = []
express = ["dep:chrono"]
transaction_reversal = ["no_openssl"]
transaction_status = ["no_openssl"]
no_openssl = ["dep:base64", "dep:x509-parser", "dep:rsa", "dep:rand"]

[dependencies]
cached = { version = "0.56", features = ["wasm", "async", "proc_macro"] }
chrono = { version = "0.4", optional = true, default-features = false, features = [
  "clock",
  "serde",
] }
derive_builder = "0.20"
openssl = { version = "0.10", optional = true, default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls-webpki-roots",
  "charset",
  "http2",
  "system-proxy",
] }
regex = { version = "1.10", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "2.0"
secrecy = "0.10"
serde-aux = "4.2"
url = { version = "2", features = ["serde"] }
# Optional dependencies for subtituting openssl dependencies
base64 = { version = "0.22", optional = true }
x509-parser = { version = "0.18", optional = true }
rsa = { version = "0.9.8", features = [
  "sha2",
  "pkcs5",
  "pem",
], optional = true }
rand = { version = "0.8", optional = true }
cfg-if = "1.0"


[dev-dependencies]
dotenvy = "0.15"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
wiremock = "0.6"
